...
  const val TAG_ACCOUNT_DELETE = "account_delete_button"
  const val TAG_USERNAME_FIELD = "account_username_field"
  const val TAG_USERNAME_EDIT = "account_username_edit"
  const val TAG_USERNAME_CANCEL = "account_username_cancel"
  const val TAG_USERNAME_SAVE = "account_username_save"
  const val TAG_GOOGLE_FIELD = "account_google_field"
  const val TAG_SIGNOUT_BUTTON = "account_signout_button"
  const val TAG_PRIVACY_TOGGLE = "account_privacy_toggle"
  const val TAG_ACCOUNT_LOADING = "account_loading"
  const val TAG_PRIVACY_HELP_ICON = "account_privacy_help_icon"
  const val TAG_PRIVACY_HELP_MENU = "account_privacy_help_menu"
}

...
